--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
           <li><a href="https://github.com/dng-es/dasnow/tarball/master">Download <strong>TAR Ball</strong></a></li>
           <li><a href="https://github.com/dng-es/dasnow">View On <strong>GitHub</strong></a></li>
         </ul>
+
+        <p class="view"><a href="demo.html" target="_blank">Demo</a></p>
       </header>
       <section>
         <p>Javascript plugin, create a snow curtain.</p>
@@ -37,6 +39,9 @@
   <span class="nt">&lt;script </span><span class="na">language=</span><span class="s">"Javascript"</span> <span class="na">src=</span><span class="s">"dasnow.js"</span><span class="nt">&gt;&lt;/script&gt;</span>
   ...
 </pre></div>
+
+<p>Demo: </p>
+<p>Click <a href="demo.html" target="_blank">here</a> to see the plugin in action.</p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/dng-es">dng-es</a></p>
@@ -44,6 +49,15 @@
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
-    
+              <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+          <script type="text/javascript">
+            try {
+              var pageTracker = _gat._getTracker("UA-45179763-1");
+            pageTracker._trackPageview();
+            } catch(err) {}
+          </script>    
   </body>
 </html>
