--- a/demo.html
+++ b/demo.html
@@ -40,5 +40,15 @@
 <p>Pellentesque hendrerit ipsum dui. Etiam hendrerit tortor vitae bibendum mattis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent ipsum augue, viverra in consectetur eget, rhoncus nec elit. Pellentesque eu varius orci, vitae pellentesque justo. Praesent lectus mauris, tempus in tempor et, suscipit a lectus. Aliquam faucibus scelerisque purus, a ultrices justo sodales consectetur. Sed scelerisque mi id dui gravida mollis. Praesent ac scelerisque ligula, quis vulputate tellus. Etiam quis pretium libero. Integer cursus egestas purus ut sodales. Aenean sagittis pulvinar vehicula.</p>
 
 <p>Duis ac congue felis. Curabitur quis purus in augue mollis condimentum nec a purus. Quisque vulputate suscipit metus eu lacinia. Ut non posuere ipsum. Nam aliquet, risus sit amet consectetur faucibus, ipsum ante tempor lacus, at convallis tellus ante eu sapien. Duis ac magna mauris. Quisque porttitor iaculis purus a placerat. </p>
+              <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+          <script type="text/javascript">
+            try {
+              var pageTracker = _gat._getTracker("UA-45179763-1");
+            pageTracker._trackPageview();
+            } catch(err) {}
+          </script>  
     </body>
 </html>
