--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <p class="view"><a href="demo.html" target="_blank">Demo</a></p>
       </header>
       <section>
-        <p>Javascript plugin, create a snow curtain.</p>
+        <p>Javascript plugin that creates a snow curtain.</p>
 
 <p>USAGE: just include dasnow.js in header section.</p>
 
