--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
       <section>
         <p>Javascript plugin that creates a snow curtain. Dasnow does not depend on others Javascript libraries</p>
 
-<p>USAGE: just include dasnow.js in header section.</p>
+        <h3>USAGE</h3>
+        <p>just include dasnow.js in header section.</p>
 
 <div class="highlight highlight-html"><pre><span class="nt">&lt;html&gt;</span>
 <span class="nt">&lt;head&gt;</span>
@@ -40,8 +41,8 @@
   ...
 </pre></div>
 
-<p>Demo: </p>
-<p>Click <a href="demo.html" target="_blank">here</a> to see the plugin in action.</p>
+        <h3>Demo</h3>
+        <p>Click <a href="demo.html" target="_blank">here</a> to see the plugin in action.</p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/dng-es">dng-es</a></p>
