--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <p class="view"><a href="demo.html" target="_blank">Demo</a></p>
       </header>
       <section>
+        <h3>About</h3>
         <p>Javascript plugin that creates a snow curtain. Dasnow does not depend on others Javascript libraries</p>
 
         <h3>USAGE</h3>
