--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h3>About</h3>
         <p>Javascript plugin that creates a snow curtain. Dasnow does not depend on others Javascript libraries</p>
 
-        <h3>USAGE</h3>
+        <h3>Usage</h3>
         <p>just include dasnow.js in header section.</p>
 
 <div class="highlight highlight-html"><pre><span class="nt">&lt;html&gt;</span>
