--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <p>Javascript plugin that creates a snow curtain. Dasnow does not depend on others Javascript libraries</p>
 
         <h3>Usage</h3>
-        <p>just include dasnow.js in header section.</p>
+        <p>Just include dasnow.js in header section.</p>
 
 <div class="highlight highlight-html"><pre><span class="nt">&lt;html&gt;</span>
 <span class="nt">&lt;head&gt;</span>
