--- a/example.html
+++ b/example.html
@@ -6,7 +6,7 @@
         <!-- Estilos CSS -->
         <style type="text/css">
         body{background-color: #15497c}
-        .snow{background-color: #fff; position: absolute;}
+        .snow{background-color: #fff;}
         </style>
         <script language="Javascript" src="js/dasnow.js"></script> 
     </head>
