--- a/example.html
+++ b/example.html
@@ -5,8 +5,8 @@
         <title>daSnow</title>
         <!-- Estilos CSS -->
         <style type="text/css">
-        body{background-color: #15497c}
-        .snow{background-color: #fff;}
+          body{background-color: #15497c}
+          .snow{background-color: #fff}
         </style>
         <script language="Javascript" src="js/dasnow.js"></script> 
     </head>
